--- a/R/bspFunctions/DESCRIPTION
+++ b/R/bspFunctions/DESCRIPTION
@@ -8,3 +8,9 @@ License: Open
 Encoding: UTF-8
 LazyData: true
 RoxygenNote: 6.0.1.9000
+Imports:
+  igraph,
+  EnvStats,
+  stats,
+  magrittr,
+  fitdistrplus
