Imported EPM paper
By Frank Hutter, Lin Xu, Holger Hoos, Kevin Leyton-Brown (2014)
1. Source
2. Data (not tracked, download from http://www.cs.ubc.ca/labs/beta/Projects/EPMs/)
3. Main article + appendix PDFs

--- a/.gitignore
+++ b/.gitignore
@@ -42,3 +42,13 @@ vignettes/*.pdf
 # VIM temporary files
 /**/*.un~
 *~
+
+external/EPMs_paper/data/
+
+external/EPMs_paper/AMAI_data/
+
+external/EPMs_paper/MIP/
+
+external/EPMs_paper/SAT/
+
+external/EPMs_paper/TSP/
