Convert graph input to a binary file

--- a/.gitignore
+++ b/.gitignore
@@ -67,3 +67,6 @@ src/Calling C/.vscode/settings.json
 src/Calling C/\.vscode/
 src/Calling C/casp
 src/Calling C/caspc
+src/Calling C/main
+
+external/SNAP/
