Reorganised for single main

--- a/src/cpp/CMakeLists.txt
+++ b/src/cpp/CMakeLists.txt
@@ -1,9 +1,12 @@
 cmake_minimum_required (VERSION 2.8.9)
 project (hello)
 
-file(GLOB SOURCES "tests/*.cpp")
-# file(GLOB SOURCES "*.cpp")
-add_executable(main ${SOURCES})
+file (GLOB CPP_FILES test/*.cpp *.cpp)
+file (GLOB H_FILES *.h /tests/*.h)
+set (SOURCE_FILES ${CPP_FILES} ${H_FILES})
+
+file(GLOB SOURCES *.cpp tests/*.cpp)
+add_executable(main ${SOURCE_FILES})
 
 
 
