Working CMake setup. So far so good...

--- a/src/cpp/CMakeLists.txt
+++ b/src/cpp/CMakeLists.txt
@@ -1,14 +1,13 @@
 cmake_minimum_required (VERSION 2.8.9)
 project (hello)
 
-file (GLOB CPP_FILES test/*.cpp *.cpp)
-file (GLOB H_FILES *.h /tests/*.h)
+file (GLOB CPP_FILES tests/*.cpp *.cpp)
+file (GLOB H_FILES tests/*.h *.h)
 set (SOURCE_FILES ${CPP_FILES} ${H_FILES})
 
-file(GLOB SOURCES *.cpp tests/*.cpp)
+include_directories("tests")
+message(${SOURCE_FILES})
 add_executable(main ${SOURCE_FILES})
-
-
 
 # add_library(GraphIO graphIO.cpp)
 
