Working #pragma omp

--- a/src/cpp/CMakeLists.txt
+++ b/src/cpp/CMakeLists.txt
@@ -1,8 +1,11 @@
 cmake_minimum_required (VERSION 2.8.9)
 project (asp)
 
-add_definitions("-fopenmp")
+# release build:
+# set(DCMAKE_BUILD_TYPE "Release")
 
+set(CMAKE_CXX_FLAGS "-fopenmp")
+message("CMAKE_CXX_FLAGS is ${CMAKE_CXX_FLAGS}")
 
 add_library(myLib graphIO.cpp algorithms.cpp Bitset.cpp)
 
@@ -15,8 +18,13 @@ add_executable(main main.cpp)
 target_link_libraries(main myLib)
 install(TARGETS main DESTINATION build)
 
+add_executable(bitset bitset.cpp)
+target_link_libraries(bitset myLib)
+target_compile_options(bitset PUBLIC "-O2")
+install(TARGETS bitset DESTINATION build)
+
 # build additional binary from alternative version of the main file
 # add_executable(bitset alt-main.cpp)
 # target_link_libraries(bitset myLib)
-# target_compile_options(bitset "-O2")
+# target_compile_options(bitset  PUBLIC -O2)
 # install(TARGETS bitset DESTINATION bin)
