Standard ASP datasets and BFS performance tests

--- a/src/cpp/CMakeLists.txt
+++ b/src/cpp/CMakeLists.txt
@@ -14,16 +14,16 @@ message("CMAKE_CXX_FLAGS is ${CMAKE_CXX_FLAGS}")
 
 add_library(myLib SHARED "")
 include(src/CMakeLists.txt)
-target_compile_options(myLib PUBLIC "-g")
+target_compile_options(myLib PUBLIC "-O3")
 install(TARGETS myLib DESTINATION lib)
 
 add_library(testLib SHARED "")
 include(tests/CMakeLists.txt)
-target_compile_options(testLib PUBLIC "-g")
+target_compile_options(testLib PUBLIC "-O3")
 install(TARGETS testLib DESTINATION lib)
 
 add_executable(main main.cpp)
-target_compile_options(main PUBLIC "-O2")
+target_compile_options(main PUBLIC "-O3")
 target_link_libraries(main myLib)
 target_link_libraries(main testLib)
 install(TARGETS main DESTINATION build)
@@ -31,7 +31,7 @@ install(TARGETS main DESTINATION build)
 add_executable(tests main-tests.cpp)
 target_link_libraries(tests myLib)
 target_link_libraries(tests testLib)
-target_compile_options(tests PUBLIC "-g")
+target_compile_options(tests PUBLIC "-O3")
 install(TARGETS tests DESTINATION build)
 
 # build additional binary from alternative version of the main file
