Prepared to run on Barabasi

--- a/cpp/CMakeLists.txt
+++ b/cpp/CMakeLists.txt
@@ -2,7 +2,7 @@ cmake_minimum_required (VERSION 2.8.9)
 project (asp CXX)
 
 # release build:
-set(CMAKE_BUILD_TYPE "Debug")
+set(CMAKE_BUILD_TYPE Release)
 
 # require C++11
 set(CMAKE_CXX_STANDARD 11)
