--- a/.gitignore
+++ b/.gitignore
@@ -78,3 +78,13 @@ java/\.classpath
 java/\.project
 
 cpp-workspace\.code-workspace
+
+java/project/
+
+java/\.ensime_cache/
+
+java/\.ensime
+
+java/sbt
+
+java/sbt-dist/
