Code on which Prometheus metrics were taken

--- a/java/src/main/resources/reference.conf
+++ b/java/src/main/resources/reference.conf
@@ -3,7 +3,7 @@
 # ======================================== #
 kamon.metric{
   tick-interval = 1 second
-  optimistic-tick-alignment = no
+  optimistic-tick-alignment = yes
 
   trace{
     tick-interval = 1 second
@@ -79,12 +79,55 @@ kamon.util.filters {
 
 
   "akka.tracked-actor" {
-    includes = [ "PingPongSystem/user/*" ]
-    excludes = []
-  }
-
-  "akka.tracked-dispatcher" {
-    includes = [ "asp/akka.actor.default-dispatcher" ]
+    includes = ["asp/user/master",
+                "asp/user/master/node-2766",
+                "asp/user/master/node-1138",
+                "asp/user/master/node-2638",
+                "asp/user/master/node-3030",
+                "asp/user/master/node-3254",
+                "asp/user/master/node-2668",
+                "asp/user/master/node-1870",
+                "asp/user/master/node-1725",
+                "asp/user/master/node-115",
+                "asp/user/master/node-1246",
+                "asp/user/master/node-112",
+                "asp/user/master/node-2688",
+                "asp/user/master/node-777",
+                "asp/user/master/node-2821",
+                "asp/user/master/node-2378",
+                "asp/user/master/node-457",
+                "asp/user/master/node-2243",
+                "asp/user/master/node-387",
+                "asp/user/master/node-241",
+                "asp/user/master/node-1152",
+                "asp/user/master/node-1372",
+                "asp/user/master/node-2151",
+                "asp/user/master/node-2269",
+                "asp/user/master/node-3097",
+                "asp/user/master/node-1257",
+                "asp/user/master/node-1261",
+                "asp/user/master/node-516",
+                "asp/user/master/node-1291",
+                "asp/user/master/node-2274",
+                "asp/user/master/node-1562",
+                "asp/user/master/node-2960",
+                "asp/user/master/node-2065",
+                "asp/user/master/node-1034",
+                "asp/user/master/node-2682",
+                "asp/user/master/node-3082",
+                "asp/user/master/node-2297",
+                "asp/user/master/node-1845",
+                "asp/user/master/node-1397",
+                "asp/user/master/node-2118",
+                "asp/user/master/node-2757",
+                "asp/user/master/node-853",
+                "asp/user/master/node-460",
+                "asp/user/master/node-3316",
+                "asp/user/master/node-1079",
+                "asp/user/master/node-1231",
+                "asp/user/master/node-3482",
+                "asp/user/master/node-2408",
+                "asp/user/master/node-1744"]
   }
 
   "akka.tracked-router" {
@@ -93,5 +136,5 @@ kamon.util.filters {
 }
 
 kamon.environment{
-  service = "akka-asp"
+  service = "asp"
 }
