Working implementation of Request for Supervisors

--- a/java/src/main/resources/reference.conf
+++ b/java/src/main/resources/reference.conf
@@ -5,11 +5,19 @@ kamon.metric{
   tick-interval = 1 second
   optimistic-tick-alignment = yes
 
-  trace{
+trace{
     tick-interval = 1 second
-  }
 }
 
+akka.actor.default-dispatcher{
+    throughput=5
+}
+
+# akka {
+#   loggers = ["akka.event.slf4j.Slf4jLogger"]
+#   loglevel = "DEBUG"
+#   logging-filter = "akka.event.slf4j.Slf4jLoggingFilter"
+# }
 kamon.prometheus {
 
   # Enable or disable publishing the Prometheus scraping enpoint using a embedded server.
