--- a/java/src/main/resources/reference.conf
+++ b/java/src/main/resources/reference.conf
@@ -4,15 +4,17 @@
 kamon.metric{
   tick-interval = 1 second
   optimistic-tick-alignment = yes
-
+}
 trace{
     tick-interval = 1 second
 }
 
 akka.actor.default-dispatcher{
-    throughput=5
+    throughput=10
 }
-
+akka {
+  log-config-on-start = "on"
+}
 # akka {
 #   loggers = ["akka.event.slf4j.Slf4jLogger"]
 #   loglevel = "DEBUG"
