Not stable correction, supervised system

--- a/java/src/main/resources/reference.conf
+++ b/java/src/main/resources/reference.conf
@@ -13,7 +13,7 @@ akka.actor.default-dispatcher{
     throughput=10
 }
 akka {
-  log-config-on-start = "on"
+  log-config-on-start = "off"
 }
 # akka {
 #   loggers = ["akka.event.slf4j.Slf4jLogger"]
