--- a/java/src/main/resources/reference.conf
+++ b/java/src/main/resources/reference.conf
@@ -1,4 +1,17 @@
 # ======================================== #
+# Logging configuration                    #
+# ======================================== #
+
+akka {
+  event-handlers = ["akka.event.slf4j.Slf4jEventHandler"]
+  loggers = ["akka.event.slf4j.Slf4jLogger"]
+  logging-filter = "akka.event.slf4j.Slf4jLoggingFilter"
+  loglevel = "DEBUG"
+  log-config-on-start = "off"
+  log-dead-letters-during-shutdown = "off"
+}
+
+# ======================================== #
 # kamon-prometheus reference configuration #
 # ======================================== #
 kamon.metric{
@@ -12,14 +25,7 @@ trace{
 akka.actor.default-dispatcher{
     throughput=10
 }
-akka {
-  log-config-on-start = "off"
-}
-# akka {
-#   loggers = ["akka.event.slf4j.Slf4jLogger"]
-#   loglevel = "DEBUG"
-#   logging-filter = "akka.event.slf4j.Slf4jLoggingFilter"
-# }
+
 kamon.prometheus {
 
   # Enable or disable publishing the Prometheus scraping enpoint using a embedded server.
